<resources>
    <string name="app_name">serenosViagens</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="conectar">Login</string>
    <string name="registrar">Registre-se</string>
    <string name="esqueci">Esqueceu a Senha</string>
    <string name="nome">Nome</string>
    <string name="email">E-Mail</string>
    <string name="CPF">CPF</string>
    <string name="viagem">Viagem</string>
    <string name="criar">Criar</string>
    <string name="valor">Valor</string>
    <string name="destino">Destino:</string>
    <string name="data">Data</string>
    <string name="origem">Origem</string>
    <string name="descricao">Descrição</string>
    <string name="atracao">Atração</string>
    <string name="nome_atracao">Nome</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="calcular">Calcular Viagem</string>
    <string name="editar">Editar Viagem</string>
    <string name="lista_despesas">Lista de Despesas</string>
    <string name="lista_viagens">Lista de Viagens</string>
    <string name="novo">Novo</string>
    <string name="visualizar">Visualizar</string>
    <string name="deletar">Deletar</string>
    <string name="gasto_gasolina">Gastos de Gasolina</string>
    <string name="total_km">Total estimado de quilômetros</string>
    <string name="media_km_l">Média de quilômetros por litro</string>
    <string name="custo_medio_l">Custo médio por litro</string>
    <string name="total_veiculos">Total de Veículos</string>
    <string name="criar_gastos">Criar Gastos</string>
    <string name="calcular_gasolina">Gasolina</string>
    <string name="calcular_aereo">Tarifa aérea</string>
    <string name="calcular_refeicao">Refeições</string>
    <string name="calcular_hospedagem">Hospedagem</string>
    <string name="calcular_diversos">Entretenimento/Diversos</string>
    <string name="resultados">Resultados</string>
    <string name="total_viajante">Total de viajantes:</string>
    <string name="duracao_viajem">Duração da viagem:</string>
    <string name="custo_total_viagem">Custo total da viagem:</string>
    <string name="custo_pessoa">Custo por pessoa:</string>
    <string name="destinacao">Destinação:</string>
    <string name="custo_l_gasolina">Custo do litro de gasolina</string>
    <string name="logue">Já tem uma conta? Conecte-se</string>
    <string name="blablabla">blablabla</string>
    <string name="cadastro_despesa">Cadastrar despesa</string>
    <string name="gasto_aereo">Gasto tarifa aérea</string>
    <string name="custo_p_pessoa">Custo por pessoa</string>
    <string name="aluguel_veiculo">Aluguel de veículo</string>
    <string name="gasto_refeicao">Total de gastos com refeições</string>
    <string name="custo_refeicao">Custo estimado por refeição</string>
    <string name="refeicoes_dia">Refeições por dia</string>
    <string name="total_quartos">Total de Quartos</string>
    <string name="total_noites">Total de Noites</string>
    <string name="custoM_noite">Custo médio (por noite)</string>
    <string name="gasto_hospedagem">Gastos de Hospedagem</string>
    <string name="gasto_entretenimento">Gastos de Entretenimento</string>
    <string name="dataVolta">Data de volta</string>
    <string name="quantPessoas">Quantidade de pessoas:</string>
    <string name="obrigatorio">*</string>
    <string name="adicionar_total">Adicionar ao total?</string>
    <string name="gasto_diversos">Gastos diversos</string>
    <string name="custoNaoAdcTotal">Custo não adicionado ao total:</string>
    <string name="descricaoPonto">Descrição:</string>
    <string-array name="spinner_adicao">
        <item>Sim</item>
        <item>Não</item>
    </string-array>
</resources>