<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:backgroundTint="@color/cinza"
        app:titleTextColor="@color/verde">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/volta32"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:contentDescription="Voltar"
            android:padding="8dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasto_gasolina"
            android:textColor="@color/verde"
            android:layout_gravity="center"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/container_radius"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_km"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <EditText
            android:id="@+id/total_km"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginHorizontal="20dp">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obrigatorio"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="3dp"
                android:textColor="@color/Vermelho">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/media_km_l"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp">
            </TextView>
        </LinearLayout>
        <EditText
            android:id="@+id/media_km_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginHorizontal="20dp">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custo_l_gasolina"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <EditText
            android:id="@+id/custo_l_gasolina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginHorizontal="20dp">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_veiculos"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <EditText
            android:id="@+id/total_veiculos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginHorizontal="20dp">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_total"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <Spinner
            android:id="@+id/adicionar_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginHorizontal="20dp">
        </Spinner>


    </LinearLayout>
    <Button
        android:id="@+id/button_new_gasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="65dp"
        android:backgroundTint="@color/verde"
        android:text="@string/criar"
        android:layout_marginTop="10dp">
    </Button>
</LinearLayout>
