<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:backgroundTint="@color/cinza"
        app:titleTextColor="@color/verde">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/volta32"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:contentDescription="Voltar"
            android:padding="8dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultados"
            android:textColor="@color/verde"
            android:layout_gravity="center"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/container_radius"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricaoPonto"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:id="@+id/descricao_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destinacao"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:id="@+id/destino_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_viajante"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:id="@+id/total_viajantes_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duracao_viajem"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:id="@+id/duracao_viajem_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custo_total_viagem"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:id="@+id/custo_total_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custoNaoAdcTotal"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:id="@+id/custo_n_total_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custo_pessoa"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:id="@+id/custo_p_pessoa_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21dp"
            android:layout_marginHorizontal="20dp">
        </TextView>

    </LinearLayout>
</LinearLayout>