<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#efefee">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/cinza"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:src="@drawable/volta32"
            android:contentDescription="Voltar"
            android:padding="8dp" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Adicionar gastos"
            android:textColor="@color/verde"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/container_radius"
        android:orientation="vertical"
        android:padding="20dp">


        <Button
            android:id="@+id/calcular_gasolina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2e492f"
            android:text="@string/calcular_gasolina"
            android:drawableBottom="@drawable/ic_gasolina"
            android:textColor="#D9D9D9"
            android:padding="20dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/calcular_aereo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2e492f"
            android:text="@string/calcular_aereo"
            android:drawableBottom="@drawable/ic_aerea"
            android:textColor="#D9D9D9"
            android:padding="20dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/teste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2e492f"
            android:text="@string/calcular_refeicao"
            android:drawableBottom="@drawable/ic_refeicao"
            android:textColor="#D9D9D9"
            android:padding="20dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/calcular_hospedagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2e492f"
            android:text="@string/calcular_hospedagem"
            android:drawableBottom="@drawable/ic_hospedagem"
            android:textColor="#D9D9D9"
            android:padding="20dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/calcular_diversos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2e492f"
            android:drawableBottom="@drawable/ic_diversos"
            android:text="@string/calcular_diversos"
            android:textColor="#D9D9D9"
            android:padding="20dp"/>
    </LinearLayout>
</LinearLayout>
