<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:backgroundTint="@color/cinza"
        app:titleTextColor="@color/verde">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/volta32"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:contentDescription="Voltar"
            android:padding="8dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasto_hospedagem"
            android:textColor="@color/verde"
            android:layout_gravity="center"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/container_radius"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custoM_noite"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:id="@+id/custoM_noite_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_noites"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:id="@+id/total_noites_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_quartos"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:id="@+id/total_quartos_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_marginHorizontal="20dp">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_total"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
        <TextView
            android:id="@+id/adicionar_total_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_marginHorizontal="20dp">
        </TextView>
    </LinearLayout>
</LinearLayout>
